[package]
name = "lapce-pyright"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust.git" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
